# CSCI-5607-Computer-Graphics

./: .gitignore  Assignment4.cpp  CMakeLists.txt  ModelLoad.cpp  README.md  build.gradle
Assignment 0/: Square.cpp  test.ppm
Assignment 0.5/: ColoredTriangle.cpp  Cube3D.cpp
Assignment 0/glad/: glad.c  glad.h
Assignment 2/: .gitignore
Assignment 2/src/main/kotlin/: Math.kt  RayTracer.kt
Assignment 3/: .gitignore  build.gradle
Assignment 3/src/main/kotlin/: App.kt  RayTracer.kt
Assignment 4/models/: triangle.txt
src/: image.cpp  image.h
src/main/kotlin/: App.kt  Math.kt  Pool.kt  RayTracer.kt  SceneParser.kt
